--- a/src/owin.study.legacy/packages.config
+++ b/src/owin.study.legacy/packages.config
@@ -1,9 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net462" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net462" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net462" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Diagnostics" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Owin.Hosting" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="OwinHost" version="3.1.0" targetFramework="net462" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net462" />
 </packages>
