--- a/src/owin.study.legacy/packages.config
+++ b/src/owin.study.legacy/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net462" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net462" />
@@ -15,6 +16,10 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="OwinHost" version="3.1.0" targetFramework="net462" />
+  <package id="Serilog" version="2.5.0" targetFramework="net462" />
+  <package id="Serilog.Sinks.ColoredConsole" version="3.0.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.Console" version="3.0.1" targetFramework="net462" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net462" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net462" />
