--- a/src/owin.study.legacy/packages.config
+++ b/src/owin.study.legacy/packages.config
@@ -20,6 +20,8 @@
   <package id="Serilog.Sinks.ColoredConsole" version="3.0.1" targetFramework="net462" />
   <package id="Serilog.Sinks.Console" version="3.0.1" targetFramework="net462" />
   <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.0.8" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.8" targetFramework="net462" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net462" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net462" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net462" />
